data/derived/comb/progs/unify/prog7663.ml.out
Characters 79-81:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type int -> 'a
       but an expression was expected of type ('a -> 'a) list
